tests/invalid/string_member_requires_mutable_receiver.wio
fn Entry() -> i32 {
    let text = "wio";
    text.Append("!");
    return 0;
}
